# nefor

./: .env  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  bootstrap.sh  disguise.test.ts  disguise.ts  flake.nix  hm-module.nix  install.sh  justfile  nefor.yaml  package-lock.json  package.json  prompt.md  vitest.config.ts
crates/nefor/: Cargo.toml  README.md  build.rs
crates/nefor-combinators/: Cargo.toml
crates/nefor-combinators/src/: combinators.rs  context.rs  lib.rs  reasoner.rs  transform.rs
crates/nefor-mag/: Cargo.toml  README.md
crates/nefor-mag/examples/: agent-loop.mag  feature-impl.mag  lead-workflow.mag  research.mag  with-require.mag  with-templates.mag
crates/nefor-mag/examples/lib/: policies.mag  tools.mag
crates/nefor-mag/examples/templates/: explore.md
crates/nefor-mag/src/: ast.rs  env.rs  error.rs  eval.rs  graph.rs  ir.rs  lexer.rs  lib.rs  main.rs  parser.rs  types.rs
crates/nefor-plugin-sdk/: Cargo.toml
crates/nefor-plugin-sdk/src/: lib.rs
crates/nefor-protocol/: Cargo.toml  README.md
crates/nefor-protocol/src/: envelope.rs  lib.rs  newtypes.rs  parse.rs  system.rs
crates/nefor-sse/: Cargo.toml
crates/nefor-sse/src/: lib.rs
crates/nefor/src/: cli.rs  config.rs  error.rs  ids.rs  lib.rs  log.rs  main.rs  paths.rs  session.rs
crates/nefor/src/events/: bus.rs  mod.rs
crates/nefor/src/lua/: bindings.rs  error.rs  (+4 more)
crates/nefor/tests/: agentic_cli_mock_e2e.rs  core_actor_test.rs  nefor_pm_test.rs  openai_provider_lib_test.rs  plugin_libs_test.rs  stage1_e2e.rs  starter_agent_reasoner_test.rs  starter_agentic_cli_test.rs  starter_agentic_workflow_test.rs  starter_lead_role_test.rs  starter_lead_workflow_test.rs  starter_loop_counter_reasoner_test.rs  starter_ncp_test.rs  starter_openai_provider_test.rs  starter_run_reasoner_test.rs  starter_sessions_test.rs  starter_tool_gate_test.rs  tool_gate_lua_test.rs
engine/: Cargo.toml  build.rs
engine/src/: cli.rs  config.rs  ids.rs  lib.rs  main.rs  paths.rs  session.rs
engine/src/events/: bus.rs  mod.rs
engine/src/lua/: mod.rs  mode.rs  vm.rs
engine/src/ncp/: broker.rs  mod.rs  runner.rs  spawn.rs
engine/tests/: agentic_cli_mock_e2e.rs  core_actor_test.rs  lua_bindings.rs  nefor_pm_test.rs  openai_provider_lib_test.rs  plugin_libs_test.rs  stage1_e2e.rs  starter_agent_reasoner_test.rs  starter_agentic_cli_test.rs  starter_agentic_workflow_test.rs  starter_lead_role_test.rs  starter_lead_workflow_test.rs  starter_loop_counter_reasoner_test.rs  starter_ncp_test.rs  starter_openai_provider_test.rs  starter_run_reasoner_test.rs  starter_sessions_test.rs  starter_tool_gate_test.rs  starter_tool_validator_test.rs  tool_gate_lua_test.rs
i-swear-it-is-not-gui/src-tauri/: Cargo.toml  tauri.conf.json
i-swear-it-is-not-gui/src-tauri/capabilities/: default.json
i-swear-it-is-not-gui/src-tauri/icons/: icon.icns
i-swear-it-is-not-gui/src-tauri/src/: lib.rs  main.rs
plugins/basic-tools/: Cargo.toml  README.md
plugins/basic-tools/src/: error.rs  main.rs  ncp.rs
plugins/basic-tools/tests/: concurrency.rs
plugins/chatgpt-provider/: Cargo.toml  README.md
plugins/chatgpt-provider/src/: broker.rs  catalog.rs  config.rs  dispatcher.rs  error.rs  installation.rs  lib.rs  main.rs  ncp.rs  state.rs  translator.rs
plugins/chatgpt-provider/tests/: auth_state_test.rs  dispatcher_test.rs  pkce_test.rs  responses_headers_test.rs  responses_request_test.rs  responses_stream_test.rs  translator_test.rs
plugins/generic-provider/: Cargo.toml  README.md
plugins/generic-provider/src/: error.rs  main.rs  ncp.rs
plugins/generic-tool/: Cargo.toml  README.md
plugins/generic-tool/src/: error.rs  main.rs  ncp.rs
plugins/mock-plugin/: Cargo.toml  README.md
plugins/mock-plugin/scenarios/: cc-like.lua  echo.lua  minimal.lua
plugins/mock-plugin/src/: error.rs  lua_host.rs  main.rs  ncp.rs  state.rs
plugins/mock-plugin/tests/: integration.rs
plugins/nefor-chat/: Cargo.toml  README.md
plugins/nefor-chat/src/: error.rs  main.rs  ncp.rs  render.rs  sidebar.rs  state.rs  wrap.rs
plugins/nefor-chat/tests/: render.rs  wrap.rs
plugins/nefor-combinators/: Cargo.toml  README.md
plugins/nefor-combinators/src/: dispatch.rs  error.rs  main.rs  ncp.rs  registry.rs
plugins/nefor-tui/: Cargo.toml  README.md
plugins/nefor-tui-decl/: Cargo.toml  README.md
plugins/nefor-tui-decl/scenarios/: spinner.lua
plugins/nefor-tui-decl/src/: animation.rs  ansi.rs  desc.rs  engine.rs  error.rs  input.rs  input_router.rs  instance.rs  layout.rs  lib.rs  lua_host.rs  main.rs  mouse.rs  ncp.rs  reconciler.rs  render.rs  text_input.rs  tty.rs
plugins/nefor-tui-decl/tests/: animation_test.rs  engine_test.rs  layout_test.rs  scrollable_test.rs  text_input_test.rs
plugins/nefor-tui/lua/: init.lua  util.lua  widget_test.lua
plugins/nefor-tui/scenarios/: counter.lua  scrollable.lua  text_input.lua  text_input_multi.lua
plugins/nefor-tui/src/: ansi.rs  clipboard.rs  clipboard_image.rs  desc.rs  engine.rs  error.rs  errors.rs  fs.rs  grid.rs  input.rs  input_router.rs  instance.rs  layout.rs  lib.rs  lua_host.rs  main.rs  markdown.rs  mouse.rs  reconciler.rs  render.rs  scrollable.rs  selection.rs  text_input.rs  transport.rs  tty.rs
plugins/nefor-tui/tests/: animation_test.rs  chat_test.rs  engine_test.rs  layout_test.rs  scrollable_test.rs  snapshot_test.rs  text_input_test.rs
plugins/openai-provider/: Cargo.toml  README.md
plugins/openai-provider/src/: auth.rs  broker.rs  catalog.rs  config.rs  error.rs  lib.rs  main.rs  ncp.rs  openai.rs  state.rs  stream.rs
plugins/openai-provider/tests/: stream_integration.rs
plugins/reasoner-graph/: Cargo.toml  README.md
plugins/reasoner-graph/src/: error.rs  graph.rs  main.rs  ncp.rs  state.rs
plugins/tool-gate/: Cargo.toml  README.md
plugins/tool-gate/src/: error.rs  main.rs  ncp.rs  policy.rs
tools/fake-engine/: Cargo.toml  README.md
tools/fake-engine/scripts/: echo-keys.jsonl  hello-world.jsonl
tools/fake-engine/src/: harness.rs  log.rs  main.rs  script.rs
tools/fake-engine/tests/: scripts_parse.rs
(+297 files in other folders)
