[workspace]
members = ["crates/*", "plugins/mock-plugin", "plugins/nefor-chat", "plugins/nefor-combinators", "plugins/nefor-tui", "tools/fake-engine"]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["amenocturne"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amenocturne/nefor"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
mlua = { version = "0.10", features = ["lua54", "async", "send", "vendored"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = "0.23"
tokio-util = "0.7"
dirs = "5"
fs2 = "0.4"
portable-pty = "0.9"
notify = "7"
futures = "0.3"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known", "macros"] }
semver = "1"
