[workspace]
members = ["crates/*", "plugins/basic-tools", "plugins/chatgpt-provider", "plugins/reasoner-graph", "plugins/generic-provider", "plugins/generic-tool", "plugins/openai-provider", "plugins/mock-plugin", "plugins/nefor-combinators", "plugins/nefor-tui", "plugins/tool-gate", "tools/fake-engine"]
resolver = "2"

[workspace.package]
version = "0.1.7"
edition = "2021"
authors = ["amenocturne"]
license = "MIT"
repository = "https://github.com/amenocturne/nefor"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
mlua = { version = "0.10", features = ["lua54", "async", "send", "vendored", "serialize"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = "0.23"
tokio-util = "0.7"
dirs = "5"
fs2 = "0.4"
portable-pty = "0.9"
notify = "7"
futures = "0.3"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known", "macros"] }
semver = "1"
