[package]
name = "nefor-combinators"
version = "0.1.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust substrate for Reasoner<C> composition (Context, Reasoner, combinators)."

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
