[package]
name = "nefor-combinators"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust substrate for Reasoner<C> composition (Context, Reasoner, combinators)."

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
