[package]
name = "nefor"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "nefor TUI agent runtime — Lua plugin host on top of nefor-combinators."
default-run = "nefor"

[dependencies]
nefor-combinators = { path = "../nefor-combinators" }
tokio = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }

# Added as concrete callers need them:
# mlua = { workspace = true }
# wasmtime = { workspace = true }
# wasmtime-wasi = { workspace = true }
# reqwest = { workspace = true }
# rustls = { workspace = true }
# fs2 = { workspace = true }
# portable-pty = { workspace = true }
# notify = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
# tokio-util = { workspace = true }
