[package]
name = "nefor"
version = "0.1.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "nefor engine — NCP broker and Lua plugin host on top of nefor-combinators."
default-run = "nefor"

[dependencies]
nefor-combinators = { path = "../nefor-combinators" }
nefor-protocol = { path = "../nefor-protocol" }
tokio = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
