[package]
name = "nefor-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
portable-pty = "0.8"
font-kit = "0.14"
tokio = { version = "1", features = ["sync"] }

[lib]
name = "nefor_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
