[package]
name = "basic-tools-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NCP v0.1 plugin: file/bash/etc. tool primitives. v1 ships read_file only; write_file and bash land later behind permission gating."

[[bin]]
name = "basic-tools"
path = "src/main.rs"

[dependencies]
nefor-protocol = { path = "../../crates/nefor-protocol" }
nefor-plugin-sdk = { path = "../../crates/nefor-plugin-sdk" }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
