[package]
name = "nefor-tui-decl"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Declarative TUI plugin for nefor — engine + reconciler + Lua-driven primitives. Phase 1 of the nefor-tui rewrite."

[[bin]]
name = "nefor-tui-decl"
path = "src/main.rs"

[dependencies]
nefor-protocol = { path = "../../crates/nefor-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
mlua = { workspace = true }

crossterm = { version = "0.29", features = ["event-stream", "use-dev-tty", "libc"] }
unicode-width = "0.2"
