[package]
name = "nefor-tui"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal frontend plugin for nefor. Speaks NCP v0.1 over stdio; renders a grid and forwards keyboard/paste/resize input."

[[bin]]
name = "nefor-tui"
path = "src/main.rs"

[dependencies]
nefor-protocol = { path = "../../crates/nefor-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }

# Declared directly (not via workspace) so this plugin's ratatui/crossterm
# choice is independent of any engine-side strip-down of workspace deps.
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream", "bracketed-paste", "use-dev-tty", "libc"] }
unicode-width = "0.2"
