[package]
name = "nefor-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Declarative TUI plugin for nefor — engine + reconciler + Lua-driven primitives. Chat is composed in starter/chat/."

[lib]
name = "nefor_tui"
path = "src/lib.rs"

[[bin]]
name = "nefor-tui"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
nefor-protocol = { path = "../../crates/nefor-protocol" }
nefor-plugin-sdk = { path = "../../crates/nefor-plugin-sdk" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
mlua = { workspace = true }

tracing-appender = "0.2"
crossterm = { version = "0.29", features = ["event-stream", "use-dev-tty", "libc"] }
unicode-width = "0.2"
pulldown-cmark = { version = "0.13", default-features = false }
arboard = { version = "3", default-features = false, features = ["image-data"] }
image = { version = "0.25", default-features = false, features = ["png"] }
